k8s/dynamic-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dynamic-web
  labels:
    name: dynamic-web
spec:
  containers:
  - name: web-generator
    image: smlinux/cowsay-web
    volumeMounts:
      - mountPath: /webdata
        name: html
  - name: web-server
    image: nginx:1.14
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: html
        readOnly: true
    ports:
      - containerPort: 80

  volumes:
    - name: html
      emptyDir: {}
