k8s/pod-multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.14
      ports:
        - containerPort: 80
    - name: centos-container
      image: centos:7
      command: ["/bin/bash", "-c", "while true;do curl http://localhost:80/;sleep 3;done"]
