k8s/appjs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-svc
spec:
  type: ClusterIP
  selector:
    app: appjs
  ports:
    - port: 80
      targetPort: 8080
