k8s/appjs-svc_Node.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-svc
spec:
  type: NodePort
  selector:
    app: appjs
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
