k8s/ingress3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-marvel
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: marvel-service
              port: 
                number: 80
  - http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: appjs-service
              port:
                number: 80
